# to_do_list

./: .env  README.md  compose.yml  pyproject.toml  pytest.ini  test.py
nginx/: to_do_list.conf
pytest_tests/: conftest.py
pytest_tests/test_homepage/: test_content_homepage.py  test_routes_homepage.py
pytest_tests/test_task_list/: test_content_task_list.py  test_logic_task_list.py  test_routes_task_list.py
pytest_tests/test_user_profile/: test_content_profile.py  test_logic_profile.py  test_routes_profile.py
to_do_list/: Dockerfile  requirements.txt  run_waitress.py
to_do_list/homepage/: urls.py  views.py
to_do_list/static/css/: style.css
to_do_list/task_list/: admin.py  forms.py  models.py  urls.py  views.py
to_do_list/task_list/migrations/: 0001_initial.py  0002_alter_task_author.py  0002_note_author_note_completed_alter_note_content.py  0003_alter_task_author.py  0003_rename_note_task.py  0004_tag_alter_task_content_alter_task_title_task_tags.py  0004_taskcontent_task_completion_date_task_planned_date_and_more.py  0005_alter_task_content_delete_taskcontent.py  0006_alter_task_completed.py
to_do_list/task_list/pytest_tests/: test_routes.py
to_do_list/tasks_calendar/: apps.py  urls.py  views.py
to_do_list/templates/: base.html  base_task_info.html
to_do_list/templates/core/: 403csrf.html  404.html
to_do_list/templates/homepage/: index.html
to_do_list/templates/includes/: header.html  paginator.html  task_edit.html
to_do_list/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  registration_form.html  reset_email.html
to_do_list/templates/task_list/: add_task.html  edit_task.html  task.html  task_info.html  task_list.html
to_do_list/templates/tasks_calendar/: calendar.html
to_do_list/templates/user_profile/: profile.html
to_do_list/to_do_list/: settings.py  urls.py
to_do_list/user_profile/: forms.py  models.py  urls.py  validators.py  views.py
to_do_list/user_profile/migrations/: 0001_initial.py  0002_alter_userprofile_birthday.py  0003_userprofile_tg_userprofile_tg_notifications.py
