[project]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Mihail Fomin PC",email = "mihanaz098@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "cryptography (>=46.0.4,<47.0.0)",
    "django-bootstrap5 (>=26.1,<27.0)",
    "sendgrid-django (>=4.2.0,<5.0.0)",
    "django-debug-toolbar (==3.8.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
