[project]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Mihail Fomin PC",email = "mihanaz098@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "cryptography (>=46.0.4,<47.0.0)",
    "django-bootstrap5 (>=26.1,<27.0)",
    "sendgrid-django (>=4.2.0,<5.0.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-cases (>=3.9.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-lazy-fixtures (>=1.4.0,<2.0.0)",
    "pytest-cases (>=3.9.1,<4.0.0)"
]
