[project]
name = "to-do-list"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.5",
    "django>=6.0.3",
    "django-bootstrap5>=26.2",
    "django-debug-toolbar>=6.2.0",
    "pillow>=12.1.1",
    "psycopg2>=2.9.11",
    "sendgrid-django>=4.2.0",
    "waitress>=3.0.2",
    "pytest>=9.0.2",
    "pytest-cases>=3.10.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.5",
]

[tool.ruff]

exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
]

lint.select = [
    "E",
    "F",
    "I",
    "UP",
    "N",
    "B",
    "C4",
    "RUF",
]

lint.ignore = [
    "RUF001",
    "RUF002"
]

target-version = "py312"

[tool.ruff.format]
quote-style = "single"
